--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get:
-  flutter_svg:
+  firebase_core:
+  firebase_auth:
+  firebase_messaging:
+  firebase_storage:
 
 dev_dependencies:
   flutter_test:
